@@ -76,6 +76,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_ImmuneAnnot.current.rpt">Alleles of Genotype Annotations with Header Term: immune system</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_MPObsolete.sql.rpt">Genotype Annotations to Obsolete MP Terms</A>
+<LI><A HREF="/data/reports/qcreports_db/output/VOC_OMIMObsolete.sql.rpt">Genotype Annotations to Obsolete OMIM Terms</A>
 </OL>
 
 <A NAME="mlc"><B>MLC</B></A>
