@@ -1,3 +1,10 @@
+TAG:  qcreports_db-3-2-0-2
+DATE: 05/02/2005
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) TR 3853/VOC_OMIMObsolete.sql
+
 TAG:  qcreports_db-tr6046-BP
 DATE: 04/27/2005
 STAFF: mbw
